# vlm_anchroing

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  RESEARCH_ROADMAP.ko.md  RESEARCH_ROADMAP.md  inputs  pyproject.toml  review.md
configs/: capability_eval.yaml  capability_eval_mme_amber.yaml  capability_eval_smoke.yaml  experiment.yaml  experiment_anchor_strengthen_prompt.yaml  experiment_chartqa.yaml  experiment_distance_tally.yaml  experiment_distance_vqa.yaml  experiment_e5b_5strat_chartqa_onevision.yaml  experiment_e5b_5strat_infographicvqa_onevision.yaml  experiment_e5b_5strat_mathvista_onevision.yaml  experiment_e5b_5strat_plotqa_onevision.yaml  experiment_e5c_tally.yaml  experiment_e5c_vqa.yaml  experiment_e5d_chartqa_validation.yaml  experiment_e5d_mathvista_validation.yaml  experiment_e5e_chartqa_full.yaml  experiment_e5e_mathvista_full.yaml  experiment_e5e_mathvista_reasoning.yaml  experiment_e5e_tallyqa_full.yaml  experiment_e7_infographicvqa_full.yaml  experiment_e7_infographicvqa_pilot.yaml  experiment_e7_plotqa_full.yaml  experiment_e7_plotqa_pilot.yaml  experiment_encoder_pilot.yaml  experiment_mathvista.yaml  experiment_tallyqa.yaml  judge_pilot.yaml  judge_pilot_anchor5.yaml  judge_pilot_v2_vlfeedback_a1.yaml  judge_pilot_v2_vlfeedback_a5.yaml  judge_pilot_v2_vlrewardbench_a1.yaml  judge_pilot_v2_vlrewardbench_a5.yaml  judge_pilot_vlrewardbench_a1.yaml  judge_pilot_vlrewardbench_a5.yaml  p0_1_calibration_qwen3vl_infovqa.yaml  p0_1_calibration_qwen3vl_plotqa.yaml  p0_1_calibration_qwen3vl_tallyqa.yaml  p0_1_gamma_beta_bridge.yaml
docs/: CHANGELOG.md
(+410 files in other folders)
